--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
     mavenCentral()
 }
 
+def props = new Properties()
+file("src/main/resources/config.properties").withInputStream { props.load(it) }
+
 dependencies {
     compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.31'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.31'
@@ -25,6 +28,9 @@ dependencies {
 
     compile "org.glassfish.jaxb:jaxb-runtime:2.3.2"
 //    testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-inmemory:2.30.1'
+
+    compile group: 'org.webjars', name: 'swagger-ui', version: props.getProperty("swaggeruiversion")
+//    compile group: 'org.webjars', name: 'swagger-ui', version: '3.25.4'
 }
 
 run {
